--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^5.2.1",
+    "@material-ui/core": "^4.1.1",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
